removed .html and  changed footer icon size

--- a/404.html
+++ b/404.html
@@ -52,7 +52,7 @@
                 <!-- Logo -->
                 <div class="col-xl-2 col-lg-2">
                   <div class="logo">
-                    <a href="index.html"
+                    <a href="index"
                       ><img
                         src="assets/img/logo/streamtor_logo_xs.png"
                         alt=""
@@ -68,16 +68,16 @@
                     <div class="main-menu d-none d-lg-block">
                       <nav>
                         <ul id="navigation">
-                          <li class="active"><a href="index.html">Home</a></li>
-                          <li><a href="features.html">Features</a></li>
-                          <li><a href="about.html">About</a></li>
-                          <li><a href="faq.html">FAQ</a></li>
+                          <li class="active"><a href="index">Home</a></li>
+                          <li><a href="features">Features</a></li>
+                          <li><a href="about">About</a></li>
+                          <li><a href="faq">FAQ</a></li>
                         </ul>
                       </nav>
                     </div>
                     <!-- Header-btn -->
                     <div class="header-right-btn d-none d-lg-block ml-65">
-                      <a href="login.html" class="border-btn">Log in</a>
+                      <a href="login" class="border-btn">Log in</a>
                     </div>
                   </div>
                 </div>
@@ -110,7 +110,7 @@
                       Opps go back to
                     </p>
                     <a
-                      href="index.html"
+                      href="index"
                       class="btn hero-btn"
                       data-animation="fadeInUp"
                       data-delay="0.7s"
@@ -213,10 +213,10 @@
                   <div class="single-footer-caption mb-30">
                     <!-- logo -->
                     <div class="footer-logo mb-25">
-                      <a href="index.html"
+                      <a href="index"
                         ><img
                           src="assets/img/logo/streamtor_logo_xs.png"
-                          width="350px"
+                          width="325px"
                           alt=""
                       /></a>
                     </div>
