--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
                         <!-- Logo -->
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo">
-                                <a href="index.html"><img src="assets/img/logo/streamtor_logo_xs.png" width="250px" alt=""></a>
+                                <a href="index"><img src="assets/img/logo/streamtor_logo_xs.png" width="250px" alt=""></a>
                             </div>
                         </div>
                         <div class="col-xl-10 col-lg-10">
@@ -53,24 +53,24 @@
                                 <div class="main-menu d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">                                                                                          
-                                            <li class="active" ><a href="index.html">Home</a></li>
-                                            <li><a href="features.html">Features</a></li>
-                                            <li><a href="about.html">About</a></li>
-                                            <li><a href="faq.html">FAQ</a></li>
+                                            <li class="active" ><a href="index">Home</a></li>
+                                            <li><a href="features">Features</a></li>
+                                            <li><a href="about">About</a></li>
+                                            <li><a href="faq">FAQ</a></li>
                                             <li><a href="#">Blog</a>
                                                 <ul class="submenu">
-                                                    <li><a href="blog.html">Blog</a></li>
-                                                    <li><a href="blog_details.html">Blog Details</a></li>
-                                                    <li><a href="elements.html">Element</a></li>
+                                                    <li><a href="blog">Blog</a></li>
+                                                    <li><a href="blog_details">Blog Details</a></li>
+                                                    <li><a href="elements">Element</a></li>
                                                 </ul>
                                             </li>
-                                            <li><a href="contact.html">Contact</a></li>
+                                            <li><a href="contact">Contact</a></li>
                                         </ul>
                                     </nav>
                                 </div>
                                 <!-- Header-btn -->
                                 <div class="header-right-btn d-none d-lg-block ml-65">
-                                    <a href="login.html" class="border-btn">Log in</a>
+                                    <a href="login" class="border-btn">Log in</a>
                                 </div>
                             </div>
                         </div> 
@@ -235,7 +235,7 @@
                         <div class="single-footer-caption mb-30">
                             <!-- logo -->
                             <div class="footer-logo mb-25">
-                                <a href="index.html"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
+                                <a href="index"><img src="assets/img/logo/logo2_footer.png" alt=""></a>
                             </div>
                             <div class="footer-tittle">
                                 <div class="footer-pera">
@@ -327,28 +327,6 @@
     <a title="Go to Top" href="#"> <i class="fas fa-level-up-alt"></i></a>
 </div>
 <!-- JS here -->
-<script src="https://smtpjs.com/v3/smtp.js"></script> 
-  <script type="text/javascript"> 
-    function sendEmail() { 
-      Email.send({ 
-        Host: "smtp.gmail.com", 
-        Username: "scribeplus.contact@gmail.com", 
-        Password: "deeplearners", 
-        To: 'jayvishaalj.01@gmail.com', 
-        From: "scribeplus.contact@gmail.com", 
-        Subject: "Sending Email using javascript", 
-        Body: "Well that was easy!!", 
-        // Attachments: [ 
-        //   { 
-        //     name: "File_Name_with_Extension", 
-        //     path: "Full Path of the file" 
-        //   }] 
-      }) 
-        .then(function (message) { 
-          alert("Mail has been sent successfully") 
-        }); 
-    } 
-  </script> 
 <script src="./assets/js/vendor/modernizr-3.5.0.min.js"></script>
 <!-- Jquery, Popper, Bootstrap -->
 <script src="./assets/js/vendor/jquery-1.12.4.min.js"></script>
